# project-weather

./: .env.example  .gitignore  README.md  TODO.md  WEB.md  pyproject.toml  run_dashboard.py  start_public_dashboard.sh  stop_public_dashboard.sh
conf/base/: catalog.yml  parameters.yml
notebooks/: 20260119_api.ipynb  20260119_edas.ipynb  20260121_ai.ipynb  20260121_logging.ipynb  edas.ipynb  nws.ipynb  pressure.ipynb
src/weather_platform/: __init__.py  pipeline_registry.py  settings.py
src/weather_platform/pipelines/: __init__.py
src/weather_platform/pipelines/data_engineering/: nodes.py  pipeline.py
src/weather_platform/pipelines/data_science/: nodes.py  pipeline.py
src/weather_platform/web/: __init__.py  app.py  predictor.py  routes.py  scheduler.py  weather_api.py  weather_bot.py
src/weather_platform/web/static/css/: style.css
src/weather_platform/web/static/js/: dashboard.js
src/weather_platform/web/templates/: base.html  index.html
