[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-weather"
version = "0.1.0"
description = "A Kedro-based weather analysis and prediction project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "kedro>=1.1.0",
    "kedro-datasets>=9.0.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "xgboost>=3.0.0",
    "pyarrow>=12.0.0",
    "optuna>=3.0.0",
    "jupyter>=1.0.0",
    "flask>=3.0.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.kedro]
package_name = "weather_platform"
project_name = "weather_platform"
kedro_init_version = "1.1.1"

[tool.kedro_telemetry]
project_id = "60b51b0dd82b40abba4790ade9c9761d"
